<resources>
    <string name="app_name">TicTacToe</string>
    <string name="HomeTitle">Tic Tac Toe</string>
    <string name="PlayButton">Play</string>

    <string name="PlayerSetupTitle">Enter Your Name</string>
    <string name="Label1">Player 1</string>
    <string name="Label2">Player 2</string>
    <string name="SubmitButton">Submit Names</string>
    <string name="NameHint">Enter Your Names</string>


    <string name="playAgainButton">Play Again</string>
    <string name="homeButton">Home</string>
</resources>